#30 - Change jackson databind to be optional / requires static