@@ -19,6 +19,7 @@
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jex</artifactId>
       <version>2.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -28,11 +29,12 @@
       <optional>true</optional>
     </dependency>
 
+    <!-- test dependencies -->
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jex-jetty</artifactId>
       <version>2.1-SNAPSHOT</version>
-      <scope>provided</scope>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -43,19 +45,5 @@
     </dependency>
 
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>
-            --add-modules io.avaje.jex.jetty
-          </argLine>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
